# ROS-Line-following-automatic-parking

./: README.md
Parking/: CMakeLists.txt  package.xml
Parking/launch/: parking.launch
Parking/scripts/: auto_parking.py
my_following_line_package_1/launch/: line_following.launch
my_following_line_package_1/scripts/: controller.py  line_detector.py
