<?xml version="1.0"?>
<package format="2">
  <name>Parking</name>
  <version>0.1.0</version>
  <description>Automatic parking node for TurtleBot3 (ROS Melodic)</description>
  <maintainer email="martin.badrous@gmail.com">Martin Badrous</maintainer>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>rospy</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>

  <export/>
</package>
